# drone

./: CMakeLists.txt  Mesh.cpp  Mesh.hpp  MyPolygon.cpp  MyPolygon.hpp  Triangle.cpp  Triangle.hpp  Vector2D.cpp  Vector2D.hpp  Wifi-router-free-icon-9.tga  determinant.cpp  determinant.h  drone.hpp  dronie.tga  main.cpp  server.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
